--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -26,7 +26,6 @@
     "build": "npm install --legacy-peer-deps && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-jest": "^26.6.0"
   }
 }
